# homework_CPL_NJU

./: CMakeLists.txt  temp.c
1-exam/: 2023-第一次机试题解.md  CMakeLists.txt  reverse.c  tictactoe.c
1-types-io/: ASCII.c  CMakeLists.txt  Change.c  Equation.c  Gravity.c  Julian.c  Pi.c  Time.c
10-double-pointers-struct/: CMakeLists.txt  bsearch.c  fifa.c  fifa_struct.c  polynlist.c  split-sort.c  temp.c
11-linked-list/: CMakeLists.txt  keyboard.c  stack-pour.c
2-exam/: CMakeLists.txt  coded-lock.c
2-if-for-array/: CMakeLists.txt  Inverse.c  collatz.c  factorial.c  series.c  single.c  standup.c  temp.c
2021-exam/: 1.c  2.c  4.c  CMakeLists.txt
3-for-a-while/: CMakeLists.txt  b-ternary-1.c  b-ternary-2.c  bubble-sort.c  decimal.c  flip.c  josephus-answer.c  josephus.c  palindrome-1.c  palindrome-2.c  quick-sort-answer.c  quick-sort.c  temp.c
4-loops/: CMakeLists.txt  formation.c  matrix-mult.c  mines.c  statistics.c  sudoku.c  trace.c
5-function/: CMakeLists.txt  absolute-prime.c  behaviors.c  magic-square.c  next-permutation.c  pair.c  radix.c  sum.c  temp.c
6-recurison/: CMakeLists.txt  decomposition.c  integration.c  max.c  max_ans.c  max_nre.c  pascal.c  poi.c  tiles.c  triangle.c
7-data-types/: CMakeLists.txt  brackets.c  buddy.c  pour.c  rotate.c  stack.c  stack_ans.c  whac-a-mole-2.c  whac-a-mole.c  wine.c
8-pointer/: interpreter.c  substr.c  title.c
9-pointers-c-strings/: CMakeLists.txt  parse.c  strs_cat.c  strs_interleaf.c  tokenizer.c  tokenizer_test.c
