add_executable(poi poi.c)
add_executable(pascal pascal.c)
add_executable(tiles tiles.c)
add_executable(max max.c)
add_executable(max_ans max_ans.c)
add_executable(integration integration.c)
add_executable(triangle triangle.c)
add_executable(max_nre max_nre.c)
add_executable(decomposition decomposition.c)