add_executable(wine wine.c)
add_executable(stack stack.c)
add_executable(stack_ans stack_ans.c)
add_executable(brackets brackets.c)
add_executable(rotate rotate.c)
add_executable(pour pour.c)
add_executable(whac-a-mole whac-a-mole.c)
add_executable(whac-a-mole-2 whac-a-mole-2.c)
add_executable(buddy buddy.c)